update the files

--- a/credit_risk_classification.ipynb
+++ b/credit_risk_classification.ipynb
@@ -594,7 +594,7 @@
    "source": [
     "**Question:** How well does the logistic regression model predict both the `0` (healthy loan) and `1` (high-risk loan) labels?\n",
     "\n",
-    "**Answer:** WRITE YOUR ANSWER HERE!"
+    "**Answer:** On the testing population (25% of the original population), the prediction for a healthy loan is very accurate (18667/(18667+97) or 99.48%), the prediction for a high-risk loan is less accurate but still acceptable (564/(564+56) or 90.97%). The overall accuracy for both predictions is very high (above 99%)Uisng"
    ]
   },
   {
