--- a/credit_risk_classification.ipynb
+++ b/credit_risk_classification.ipynb
@@ -293,13 +293,13 @@
     "# Separate the y variable, the labels\n",
     "y = lending_df['loan_status']\n",
     "\n",
-    "# Separate the X variable, the features\n",
-    "X = lending_df.drop(columns=['loan_status'])"
+    "# Separate the X variable, the features, dropping the independent parameter \"total_debt\" too\n",
+    "X = lending_df.drop(columns=['loan_status','total_debt'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -313,7 +313,7 @@
        "Name: loan_status, dtype: int64"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -325,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -355,7 +355,6 @@
        "      <th>debt_to_income</th>\n",
        "      <th>num_of_accounts</th>\n",
        "      <th>derogatory_marks</th>\n",
-       "      <th>total_debt</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -367,7 +366,6 @@
        "      <td>0.431818</td>\n",
        "      <td>5</td>\n",
        "      <td>1</td>\n",
-       "      <td>22800</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -377,7 +375,6 @@
        "      <td>0.311927</td>\n",
        "      <td>3</td>\n",
        "      <td>0</td>\n",
-       "      <td>13600</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -387,7 +384,6 @@
        "      <td>0.349241</td>\n",
        "      <td>3</td>\n",
        "      <td>0</td>\n",
-       "      <td>16100</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -397,7 +393,6 @@
        "      <td>0.430740</td>\n",
        "      <td>5</td>\n",
        "      <td>1</td>\n",
-       "      <td>22700</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -407,7 +402,6 @@
        "      <td>0.433962</td>\n",
        "      <td>5</td>\n",
        "      <td>1</td>\n",
-       "      <td>23000</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -421,15 +415,15 @@
        "3    10700.0          7.664            52700        0.430740                5   \n",
        "4    10800.0          7.698            53000        0.433962                5   \n",
        "\n",
-       "   derogatory_marks  total_debt  \n",
-       "0                 1       22800  \n",
-       "1                 0       13600  \n",
-       "2                 0       16100  \n",
-       "3                 1       22700  \n",
-       "4                 1       23000  "
+       "   derogatory_marks  \n",
+       "0                 1  \n",
+       "1                 0  \n",
+       "2                 0  \n",
+       "3                 1  \n",
+       "4                 1  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -541,8 +535,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[18667    97]\n",
-      " [   56   564]]\n"
+      "[[18676    76]\n",
+      " [   63   569]]\n"
      ]
     }
    ],
@@ -563,13 +557,24 @@
      "text": [
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           0       1.00      0.99      1.00     18764\n",
-      "           1       0.85      0.91      0.88       620\n",
+      "           0       1.00      1.00      1.00     18752\n",
+      "           1       0.88      0.90      0.89       632\n",
       "\n",
       "    accuracy                           0.99     19384\n",
-      "   macro avg       0.93      0.95      0.94     19384\n",
+      "   macro avg       0.94      0.95      0.94     19384\n",
       "weighted avg       0.99      0.99      0.99     19384\n",
       "\n"
+     ]
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
+      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
+      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
+      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
      ]
     }
    ],
@@ -594,7 +599,7 @@
    "source": [
     "**Question:** How well does the logistic regression model predict both the `0` (healthy loan) and `1` (high-risk loan) labels?\n",
     "\n",
-    "**Answer:** On the testing population (25% of the original population), the prediction for a healthy loan is very accurate (18667/(18667+97) or 99.48%), the prediction for a high-risk loan is less accurate but still acceptable (564/(564+56) or 90.97%). The overall accuracy for both predictions is very high (above 99%)Uisng"
+    "**Answer:** On the testing population (25% of the original population), the prediction for a healthy loan is very accurate (18667/(18667+76) or 99.60), the prediction for a high-risk loan is less accurate but still acceptable (569/(569+63) or 90.03%). The overall accuracy for both predictions is very high (above 99%) still."
    ]
   },
   {
